--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-Flask==2.0.2
-torch==1.10.0
-nltk==3.6.3
-numpy==1.21.3
-flask-cors==3.1.1
+# Flask==2.0.2
+# torch==1.10.0
+# nltk==3.6.3
+# numpy==1.21.3
+# flask-cors==3.1.1
+
+
+Flask==3.0.0
+torch==2.1.0
+nltk==3.8.1
+numpy==1.24.3
+flask-cors==4.0.0
