--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,14 @@
-# Ignore Python virtual environment
-.venv
-venv
-env
-
-# Ignore git repository
-.git
-
-# Ignore IDE and OS files
-.idea
-.vscode
-__pycache__
+__pycache__/
 *.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+*.log
+.env
+.git
+.gitignore
+venv
+node_modules
+datasets
+models
