--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask
-torch==2.5.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+torch==2.5.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 nltk
 numpy
 flask-cors
